--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,23 @@
 /node_modules
 /.pnp
 .pnp.js
-
+/adminpanel/node_modules
+/adminpanel/.gitefilehere
+/api/node_modules
+/client/node_modules
+/x
 # testing
 /coverage
-
+/adminpanel/coverage
+/api/coverage
+/client/coverage
 # production
 /build
-
+/adminpanel/build
+/api/build
+/client/build
 # misc
+.env
 .DS_Store
 .env.local
 .env.development.local
